# tally

./: .gitattributes  .gitignore  README.md  Tally 시작.bat  pyproject.toml  server.toml  settings.json  tally_server.py
docs/superpowers/plans/: 2026-07-09-tally-linux-migration.md
docs/superpowers/specs/: 2026-07-09-tally-linux-migration-design.md
setup/: authorize.py  firewall.sh  install.sh  rename.sh  run.sh  tally.service
templates/: control.html  index.html
tests/: test_auth.py  test_config.py  test_parse.py  test_routes.py
